--- a/cinema-desk/src/main/resources/hu/alkfejl/reservationTable.fxml
+++ b/cinema-desk/src/main/resources/hu/alkfejl/reservationTable.fxml
@@ -14,7 +14,7 @@
                 <TableColumn fx:id="dateCol" minWidth="0.0" prefWidth="371.0" text="Date" />
             <TableColumn fx:id="roomCol" prefWidth="105.0" text="Room" />
             <TableColumn fx:id="seatsCol" prefWidth="101.0" text="Seats" />
-                <TableColumn fx:id="actionsCol" minWidth="0.0" prefWidth="0.0" text="Actions" />
+                <TableColumn fx:id="actionsCol" minWidth="94.0" prefWidth="94.0" maxWidth="94.0" text="Actions" />
             </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
